--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Authors@R: c (person("Tim T.", "Rademacher", email = "trademacher@fas.harvard.ed
 Description: The package provides functions to process raw data from colourimetric assays to analyse the sugar or starch content of a sample.  
 Depends: R (>= 3.5.1)
 Imports: 
+    openxlsx,
     readxl
-    openxlsx
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
