--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: The package provides functions to process raw data from colourimetr
 Depends: R (>= 3.5.1)
 Imports: 
     openxlsx,
-    readxl
+    readxl,
+    tidyverse
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
